Just adding some dummy stuff and things

--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="index.css">
     <title></title>
   </head>
   <body>
-    <h1>Sup</h1>
+    <h1 class="fancy-header">Sup</h1>
+    <p class="fancy-text">Put some words here and whatnot.</p>
   </body>
 </html>
